manifests/media-stack/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  type: NodePort
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
      nodePort: 30004
